# ShamirSecretSharing

./: .travis.yml  CMakeLists.txt  README.md  bintray-descriptor.json  errors.h  script  script.sh  shamir_scheme.h  shamir_types.h
ShamirScheme/: .travis.yml  CMakeLists.txt  bintray-descriptor.json  multithreading.h  shamir_scheme.c  types.h
cmake/: FindGcov.cmake  FindLcov.cmake  Findcodecov.cmake
dockerfiles/: CMakeLists.txt  dockerfile
headers/: multithreading.h  shamir_scheme.h  shamir_types.h
sample/windows/: secret_sharing.sln
sample/windows/secret_sharing/: secret_sharing.cpp  secret_sharing.vcxproj  secret_sharing.vcxproj.filters  shamir_scheme.h  shamird.lib
sample/windows/secret_sharing/Debug/: vc142.idb
sample/windows/secret_sharing/Debug/secret_sharing.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  secret_sharing.lastbuildstate
sample/windows/secret_sharing/x64/Debug/: vc142.idb
sample/windows/secret_sharing/x64/Debug/secret_sharing.tlog/: link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  secret_sharing.lastbuildstate
sample/windows/secret_sharing/x64/Release/secret_sharing.tlog/: secret_sharing.lastbuildstate
source/: CMakeLists.txt  calc.c  calc.h  multithreading.h  shamir_scheme.c  types.h
testing/: CMakeLists.txt  all_tests.h  macros.h  main.cpp  shamir_test.h  test_case.h
